<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    app:cardBackgroundColor="@color/cinza_escuro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgEvento"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/imagem_do_evento"
            android:scaleType="centerCrop"
            android:paddingBottom="8dp"
            android:src="@drawable/imagem_do_evento" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvNomeEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_do_evento"
                android:textColor="@color/neon_vermelho"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDataEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/_25_de_dezembro_22_00"
                android:textColor="@color/neon_amarelo"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvDescricaoEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/descri_o_curta_do_evento_falando_sobre_as_bandas_e_o_que_esperar_da_noite"
                android:textColor="@color/branco"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>