<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="6dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="#B31A1A1A">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgItemCardapio"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/hamburguer_rock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNomeItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="@string/hamb_rguer_rock_n_roll"
            android:textColor="@color/neon_roxo"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgItemCardapio"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescricaoItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/hamb_rguer_com_cheddar_bacon_e_molho_secreto"
            android:textColor="@color/branco"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/tvNomeItem"
            app:layout_constraintStart_toStartOf="@id/tvNomeItem"
            app:layout_constraintTop_toBottomOf="@id/tvNomeItem" />

        <TextView
            android:id="@+id/tvPrecoItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/r_25_90"
            android:textColor="@color/neon_vermelho"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAdicionar"
            app:layout_constraintStart_toStartOf="@id/tvDescricaoItem"
            app:layout_constraintTop_toBottomOf="@id/tvDescricaoItem" />

        <Button
            android:id="@+id/btnAdicionar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adicionar"
            android:textColor="@color/neon_amarelo"
            app:layout_constraintBottom_toBottomOf="@id/tvPrecoItem"
            app:layout_constraintEnd_toEndOf="@id/tvDescricaoItem"
            app:layout_constraintTop_toTopOf="@id/tvPrecoItem"
            app:strokeColor="@color/neon_amarelo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>